--- a/ss2/baitap8.html
+++ b/ss2/baitap8.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
+    <style>
+        table {
+  border-spacing: 10px;
+}
+        th, td {
+  padding-top: 10px;
+  padding-bottom: 20px;
+  padding-left: 30px;
+  padding-right: 40px;
+}
+    </style>
     <table border="1">
         <thead>
             <tr>
