--- a/ss5/baitap7.html
+++ b/ss5/baitap7.html
@@ -5,24 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-
         table{
             border-spacing: 0px;
             width: 60%;
         }
         th, td{
             padding: 5px;
+            text-align:center;
         }
         th{
+            text-align:center;
             color: white;
             background-color: #0051ff;
         }
-        tr:nth-child(2,4,6){
-            style="background-color: bl"
+        tr:nth-child(2){
+            background-color: rgba(83, 83, 83, 0.19);
         }
-        th, td{
-            text-align: left;
+        tr:nth-child(4){
+            background-color: rgba(83, 83, 83, 0.19);
         }
+        tr:nth-child(6){
+            background-color: rgba(83, 83, 83, 0.19);
+        }
+       
         .view{
             background-color: #4CAF50;
             border: none;
@@ -58,6 +63,10 @@
             font-size: 16px;
             margin: 4px 2px;
             cursor: pointer;
+        }
+        *{
+            font-family: Arial, sans-serif;
+            text-align: center;
         }
     </style>
 </head>
